bugs mostly squashed, work on timer

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,14 +11,21 @@ body {
   display: none;
 }
 
+#scoreBoard div {
+  display: inline-block;
+  height: 100px;
+  width: auto;
+  margin: auto;
+}
+
 .crabGridTile {
   display: inline-block;
   height: 30px;
   width: 30px;
-  border: 5px inset rgb(142, 142, 142);
+  border: 5px inset rgb(200, 200, 200);
   text-align: center;
   vertical-align: bottom;
-  background-color: rgb(130, 130, 130);
+  background-color: rgb(200, 200, 200);
 }
 
 .crabGridTile p {
